wrote ball move right-left code not working

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Golf!</title>
   </head>
   <body>
+    <h1>Putt Putt Golf</h1>
     <!-- this is the golf course -->
     <div id="grid">
     </div>
