--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
     <!-- this is the golf course -->
     <div id="grid">
     </div>
+    <div id="ballContainer">
+    </div>  
+    <footer>
+      <div id="leftButton"></div>
+      <div id="rightButton"></div>
+    </footer>
   </body>
 </html>
