created strength meter

--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
     <div id="grid">
     </div>
     <div id="ballContainer">
-    </div>  
+    </div>
     <footer>
       <div id="leftButton"></div>
+      <div id="strengthMeter">
+        <div class="green"></div>
+        <div class="green"></div>
+        <div class="green"></div>
+        <div class="yellow"></div>
+        <div class="yellow"></div>
+        <div class="yellow"></div>
+        <div class="orange"></div>
+        <div class="orange"></div>
+        <div class="red"></div>
+        <div class="red"></div>
+      </div>
       <div id="rightButton"></div>
     </footer>
   </body>
