--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <footer>
       <div id="leftButton"></div>
       <div id="strengthMeter">
-        <div class="green"></div>
-        <div class="green"></div>
-        <div class="green"></div>
-        <div class="yellow"></div>
-        <div class="yellow"></div>
-        <div class="yellow"></div>
-        <div class="orange"></div>
-        <div class="orange"></div>
-        <div class="red"></div>
-        <div class="red"></div>
+        <div class="green" id="bar1"></div>
+        <div class="green" id="bar2"></div>
+        <div class="green" id="bar3"></div>
+        <div class="yellow" id="bar4"></div>
+        <div class="yellow" id="bar5"></div>
+        <div class="yellow" id="bar6"></div>
+        <div class="orange" id="bar7"></div>
+        <div class="orange" id="bar8"></div>
+        <div class="red" id="bar9"></div>
+        <div class="red" id="bar10"></div>
       </div>
       <div id="rightButton"></div>
     </footer>
