erased grid-added source-working on strength meter

--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
       <div id="rightButton"></div>
     </footer>
   </body>
+    <div id="rights">Made with &hearts; by <a href="https://github.com/allysonfinck">Allyson Finck</a></div>
 </html>
