ball moves according to strength meter

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <h1>Putt Putt Golf</h1>
     <!-- this is the golf course -->
-    <div id="grid">
-    </div>
-    <div id="ballContainer">
+    <div class="container">
+      <div id="grid">
+      </div>
     </div>
     <footer>
       <div id="leftButton"></div>
