game restarts rounds after every shot

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1>Putt Putt Golf</h1>
+    <h2>Round: </h2>
     <button id="openModal">Instructions</button>
     <div id="modal">
       <div id="modal-textbox">
