--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   </head>
   <body>
     <h1>Putt Putt Golf</h1>
-    <h2>Round: </h2>
+    <div id="stats">
+      <h2 class="roundNum">Round: 1</h2>
+      <h2 class="winNum">Wins: 0</h2>
+      <h2 class="loseNum">Losses: 0</h2>
+    </div>  
     <button id="openModal">Instructions</button>
     <div id="modal">
       <div id="modal-textbox">
