--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <h2 class="roundNum">Round: 1</h2>
       <h2 class="winNum">Wins: 0</h2>
       <h2 class="loseNum">Losses: 0</h2>
-    </div>  
+    </div>
     <button id="openModal">Instructions</button>
     <div id="modal">
       <div id="modal-textbox">
         <h1>How to Play Browser Golf</h1>
-        <p>Each round will begin with your golf ball in the back and center of the green. Line up your ball with the hole by clicking the arrows below, and determine the strength of your swing by the meter. Click on the ball to swing! Beat 9 rounds to claim your spot as the new Putt Putt Champion!</p>
+        <p>Each round will begin with your golf ball in the back and center of the green. Line up your ball with the hole by clicking the arrows below, and determine the strength of your swing by clicking on an indicator within the meter. Click on the ball to swing! Beat 9 rounds to claim your spot as the new Putt Putt Champion!</p>
         <a id="close" href="#">Close</a>
       </div>
     </div>
